@@ -1510,9 +1510,9 @@ ignored.
 .br
 .I /usr/local/etc/ctags.conf
 .br
-.I $HOME/.ctags ($HOME/ctags.cnf on MSDOS, MSWindows, OS/2)
+.I $HOME/.ctags ($HOME/ctags.cnf on MSDOS, MSWindows)
 .br
-.I .ctags (ctags.cnf on MSDOS, MSWindows, OS/2)
+.I .ctags (ctags.cnf on MSDOS, MSWindows)
 .IP
 If any of these configuration files exist, each will be expected to contain a
 set of default options which are read in the order listed when \fBctags\fP
